.metadata/.plugins/org.eclipse.cdt.ui/Experiment.build.log
16:26:37 **** Build of configuration Debug for project experiment ****
make all 
'Building file: ../helloworld.cpp'
'Invoking: Cross G++ Compiler'
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"helloworld.d" -MT"helloworld.o" -o "helloworld.o" "../helloworld.cpp"
../helloworld.cpp: In function 'int main()':
../helloworld.cpp:10:22: error: no match for 'operator>>' (operand types are 'std::basic_ostream<char>' and '<unresolved overloaded function type>')
  cout<<"hello world!">>endl;
  ~~~~~~~~~~~~~~~~~~~~^~~~~~
In file included from d:\programs files\gcc\include\c++\6.3.0\string:53:0,
                 from d:\programs files\gcc\include\c++\6.3.0\bits\locale_classes.h:40,
                 from d:\programs files\gcc\include\c++\6.3.0\bits\ios_base.h:41,
                 from d:\programs files\gcc\include\c++\6.3.0\ios:42,
                 from d:\programs files\gcc\include\c++\6.3.0\ostream:38,
                 from d:\programs files\gcc\include\c++\6.3.0\iostream:39,
                 from ../helloworld.cpp:6:
d:\programs files\gcc\include\c++\6.3.0\bits\basic_string.tcc:1437:5: note: candidate: template<class _CharT, class _Traits, class _Alloc> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&)
     operator>>(basic_istream<_CharT, _Traits>& __in,
     ^~~~~~~~
d:\programs files\gcc\include\c++\6.3.0\bits\basic_string.tcc:1437:5: note:   template argument deduction/substitution failed:
../helloworld.cpp:10:24: note:   'std::basic_ostream<char>' is not derived from 'std::basic_istream<_CharT, _Traits>'
  cout<<"hello world!">>endl;
                        ^~~~
In file included from d:\programs files\gcc\include\c++\6.3.0\istream:934:0,
                 from d:\programs files\gcc\include\c++\6.3.0\iostream:40,
                 from ../helloworld.cpp:6:
d:\programs files\gcc\include\c++\6.3.0\bits\istream.tcc:955:5: note: candidate: template<class _CharT2, class _Traits2> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, _CharT2*)
     operator>>(basic_istream<_CharT, _Traits>& __in, _CharT* __s)
     ^~~~~~~~
d:\programs files\gcc\include\c++\6.3.0\bits\istream.tcc:955:5: note:   template argument deduction/substitution failed:
../helloworld.cpp:10:24: note:   'std::basic_ostream<char>' is not derived from 'std::basic_istream<_CharT, _Traits>'
  cout<<"hello world!">>endl;
                        ^~~~
In file included from d:\programs files\gcc\include\c++\6.3.0\istream:934:0,
                 from d:\programs files\gcc\include\c++\6.3.0\iostream:40,
                 from ../helloworld.cpp:6:
d:\programs files\gcc\include\c++\6.3.0\bits\istream.tcc:923:5: note: candidate: template<class _CharT, class _Traits> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, _CharT&)
     operator>>(basic_istream<_CharT, _Traits>& __in, _CharT& __c)
     ^~~~~~~~
d:\programs files\gcc\include\c++\6.3.0\bits\istream.tcc:923:5: note:   template argument deduction/substitution failed:
../helloworld.cpp:10:24: note:   'std::basic_ostream<char>' is not derived from 'std::basic_istream<_CharT, _Traits>'
  cout<<"hello world!">>endl;
                        ^~~~
In file included from d:\programs files\gcc\include\c++\6.3.0\iostream:40:0,
                 from ../helloworld.cpp:6:
d:\programs files\gcc\include\c++\6.3.0\istream:756:5: note: candidate: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, unsigned char&)
     operator>>(basic_istream<char, _Traits>& __in, unsigned char& __c)
     ^~~~~~~~
d:\programs files\gcc\include\c++\6.3.0\istream:756:5: note:   template argument deduction/substitution failed:
../helloworld.cpp:10:24: note:   'std::basic_ostream<char>' is not derived from 'std::basic_istream<char, _Traits>'
  cout<<"hello world!">>endl;
                        ^~~~
In file included from d:\programs files\gcc\include\c++\6.3.0\iostream:40:0,
                 from ../helloworld.cpp:6:
d:\programs files\gcc\include\c++\6.3.0\istream:761:5: note: candidate: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, signed char&)
     operator>>(basic_istream<char, _Traits>& __in, signed char& __c)
     ^~~~~~~~
d:\programs files\gcc\include\c++\6.3.0\istream:761:5: note:   template argument deduction/substitution failed:
../helloworld.cpp:10:24: note:   'std::basic_ostream<char>' is not derived from 'std::basic_istream<char, _Traits>'
  cout<<"hello world!">>endl;
                        ^~~~
In file included from d:\programs files\gcc\include\c++\6.3.0\iostream:40:0,
                 from ../helloworld.cpp:6:
d:\programs files\gcc\include\c++\6.3.0\istream:803:5: note: candidate: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, unsigned char*)
     operator>>(basic_istream<char, _Traits>& __in, unsigned char* __s)
     ^~~~~~~~
d:\programs files\gcc\include\c++\6.3.0\istream:803:5: note:   template argument deduction/substitution failed:
../helloworld.cpp:10:24: note:   'std::basic_ostream<char>' is not derived from 'std::basic_istream<char, _Traits>'
  cout<<"hello world!">>endl;
                        ^~~~
In file included from d:\programs files\gcc\include\c++\6.3.0\iostream:40:0,
                 from ../helloworld.cpp:6:
d:\programs files\gcc\include\c++\6.3.0\istream:808:5: note: candidate: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, signed char*)
     operator>>(basic_istream<char, _Traits>& __in, signed char* __s)
     ^~~~~~~~
d:\programs files\gcc\include\c++\6.3.0\istream:808:5: note:   template argument deduction/substitution failed:
../helloworld.cpp:10:24: note:   'std::basic_ostream<char>' is not derived from 'std::basic_istream<char, _Traits>'
  cout<<"hello world!">>endl;
                        ^~~~
In file included from d:\programs files\gcc\include\c++\6.3.0\iostream:40:0,
                 from ../helloworld.cpp:6:
d:\programs files\gcc\include\c++\6.3.0\istream:924:5: note: candidate: template<class _CharT, class _Traits, class _Tp> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&&, _Tp&)
     operator>>(basic_istream<_CharT, _Traits>&& __is, _Tp& __x)
     ^~~~~~~~
d:\programs files\gcc\include\c++\6.3.0\istream:924:5: note:   template argument deduction/substitution failed:
../helloworld.cpp:10:24: note:   'std::basic_ostream<char>' is not derived from 'std::basic_istream<_CharT, _Traits>'
  cout<<"hello world!">>endl;
                        ^~~~
make: *** [subdir.mk:20: helloworld.o] Error 1

16:26:37 Build Finished (took 422ms)

